6gio47ngay7thang11nam2025-lastfixed

--- a/html/games-category/free-fire.html
+++ b/html/games-category/free-fire.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Fire - GameHub (Pure Bootstrap)</title>
+    <title>Free Fire - GameHub</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="../mainforgames.html">
+            <a class="navbar-brand" href="/indexforgames.html">
                 <span class="brand-icon">H</span>
                 HariGames
             </a>
@@ -25,19 +25,7 @@
                         <button class="btn btn-primary ms-3" type="button">Đăng Nhập</button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="indexforgames.html">Games</a>
+                        <a class="nav-link" href="/index.html">Trang Chủ</a>
                     </li>
                 </ul>
             </div>
@@ -67,7 +55,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Free Fire Acc" class="product-image">
+                        <img src="/img/imgames/freefire/accountff1.png" alt="Free Fire Acc" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Rank Vàng</h5>
                             <p class="product-category">50+ Súng</p>
@@ -81,7 +69,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Free Fire Elite" class="product-image">
+                        <img src="/img/imgames/freefire/accountff2.png" alt="Free Fire Elite" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Rank Bạc</h5>
                             <p class="product-category">30+ Súng</p>
@@ -96,7 +84,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge sale">Giảm Giá</div>
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Free Fire Đồng" class="product-image">
+                        <img src="/img/imgames/freefire/accountff3.png" alt="Free Fire Đồng" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Rank Đồng</h5>
                             <p class="product-category">15+ Súng</p>
@@ -110,7 +98,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Free Fire Cao Thủ" class="product-image">
+                        <img src="/img/imgames/freefire/accountff4.png" alt="Free Fire Cao Thủ" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Cao Thủ</h5>
                             <p class="product-category">80+ Súng</p>
@@ -125,7 +113,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Mới</div>
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Free Fire Thách Đấu" class="product-image">
+                        <img src="/img/imgames/freefire/accountff5.png" alt="Free Fire Thách Đấu" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Thách Đấu</h5>
                             <p class="product-category">60+ Súng</p>
@@ -139,7 +127,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Free Fire Vàng+" class="product-image">
+                        <img src="/img/imgames/freefire/accountff6.png" alt="Free Fire Vàng+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Vàng+</h5>
                             <p class="product-category">55+ Súng</p>
@@ -153,7 +141,7 @@
                 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Free Fire Bạc+" class="product-image">
+                        <img src="/img/imgames/freefire/accountff7.png" alt="Free Fire Bạc+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Bạc+</h5>
                             <p class="product-category">40+ Súng</p>
@@ -167,7 +155,7 @@
                 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Free Fire Đồng+" class="product-image">
+                        <img src="/img/imgames/freefire/accountff8.png" alt="Free Fire Đồng+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Free Fire Đồng+</h5>
                             <p class="product-category">25+ Súng</p>
@@ -209,13 +197,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>GameHub</h5>
+                    <h5>HariGames</h5>
                     <p>Sàn mua bán acc game uy tín.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                         <li><a href="#">Điều Khoản</a></li>
                     </ul>
@@ -226,7 +214,7 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p class="text-center mb-0">&copy; 2025 GameHub.</p>
+            <p class="text-center mb-0">&copy; 2025 HariGames.</p>
         </div>
     </footer>
 </body>
