--- a/html/games-category/lien-quan.html
+++ b/html/games-category/lien-quan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liên Quân - GameHub</title>
+    <title>Liên Quân - HariGames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../mainforgames.html">
+            <a class="navbar-brand" href="/indexforgames.html">
                 <span class="brand-icon">H</span>
                 HariGames
             </a>
@@ -23,19 +23,7 @@
                         <button class="btn btn-primary ms-3">Đăng Nhập</button>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="indexforgames.html">Games</a>
+                        <a class="nav-link" href="/index.html">Trang Chủ</a>
                     </li>
                 </ul>
             </div>
@@ -68,7 +56,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Liên Quân Acc" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq1.png" alt="Liên Quân Acc" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Rank Vàng</h5>
                             <p class="product-category">50+ Tướng</p>
@@ -82,7 +70,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Liên Quân Elite" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq2.png" alt="Liên Quân Elite" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Rank Bạc</h5>
                             <p class="product-category">30+ Tướng</p>
@@ -97,7 +85,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge sale">Giảm Giá</div>
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Liên Quân Đồng" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq3.png" alt="Liên Quân Đồng" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Rank Đồng</h5>
                             <p class="product-category">15+ Tướng</p>
@@ -111,7 +99,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Liên Quân Cao Thủ" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq4.png" alt="Liên Quân Cao Thủ" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Cao Thủ</h5>
                             <p class="product-category">80+ Tướng</p>
@@ -126,7 +114,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Mới</div>
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Liên Quân Thách Đấu" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq5.png" alt="Liên Quân Thách Đấu" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Thách Đấu</h5>
                             <p class="product-category">60+ Tướng</p>
@@ -140,7 +128,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Liên Quân Vàng+" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq6.png" alt="Liên Quân Vàng+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Vàng+</h5>
                             <p class="product-category">55+ Tướng</p>
@@ -154,7 +142,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Liên Quân Bạc+" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq7.png" alt="Liên Quân Bạc+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Bạc+</h5>
                             <p class="product-category">40+ Tướng</p>
@@ -168,7 +156,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Liên Quân Đồng+" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq8.png" alt="Liên Quân Đồng+" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Liên Quân Đồng+</h5>
                             <p class="product-category">25+ Tướng</p>
@@ -297,13 +285,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>GameHub</h5>
+                    <h5>HariGames</h5>
                     <p>Sàn mua bán acc game uy tín.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                         <li><a href="#">Điều Khoản</a></li>
                     </ul>
