--- a/html/games-category/roblox.html
+++ b/html/games-category/roblox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox - GameHub</title>
+    <title>Roblox - HariGames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="../mainforgames.html">
+            <a class="navbar-brand" href="/indexforgames.html">
                 <span class="brand-icon">H</span>
                 HariGames
             </a>
@@ -21,28 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../mainforgames.html">Trang Chủ</a>
+                        <a class="nav-link" href="/indexforgames.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Roblox</a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-primary ms-3">Đăng Nhập</button>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html#categories">Danh Mục</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="indexforgames.html">Games</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +60,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Roblox Acc" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox1.png" alt="Roblox Acc" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Premium 50K</h5>
                             <p class="product-category">50K Robux</p>
@@ -89,7 +74,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Roblox Elite" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox2.png" alt="Roblox Elite" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Premium 100K</h5>
                             <p class="product-category">100K Robux</p>
@@ -104,7 +89,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge sale">Giảm Giá</div>
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Roblox Starter" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox3.png" alt="Roblox Starter" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Starter 10K</h5>
                             <p class="product-category">10K Robux</p>
@@ -118,7 +103,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Roblox Pro" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox4.png" alt="Roblox Pro" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Pro 200K</h5>
                             <p class="product-category">200K Robux</p>
@@ -133,7 +118,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Mới</div>
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Roblox Plus" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox5.png" alt="Roblox Plus" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Plus 75K</h5>
                             <p class="product-category">75K Robux</p>
@@ -147,7 +132,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1552820728-8ac41f1ce891?w=250&h=250&fit=crop" alt="Roblox Max" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox6.png" alt="Roblox Max" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Max 150K</h5>
                             <p class="product-category">150K Robux</p>
@@ -161,7 +146,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1538481143235-5d630e50c6da?w=250&h=250&fit=crop" alt="Roblox Ultra" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox7.png" alt="Roblox Ultra" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Ultra 30K</h5>
                             <p class="product-category">30K Robux</p>
@@ -175,7 +160,7 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://images.unsplash.com/photo-1511512578615-a3eb3dd08d33?w=250&h=250&fit=crop" alt="Roblox Mega" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox8.png" alt="Roblox Mega" class="product-image">
                         <div class="product-info">
                             <h5 class="product-title">Roblox Mega 250K</h5>
                             <p class="product-category">250K Robux</p>
@@ -304,13 +289,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <h5>GameHub</h5>
+                    <h5>HariGames</h5>
                     <p>Sàn mua bán acc game uy tín.</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="../mainforgames.html">Trang Chủ</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                         <li><a href="#">Điều Khoản</a></li>
                     </ul>
@@ -321,7 +306,7 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p class="text-center mb-0">&copy; 2025 GameHub.</p>
+            <p class="text-center mb-0">&copy; 2025 HariGames.</p>
         </div>
     </footer>
 </body>
