--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/index.html">
                 <span class="brand-icon">H</span>
                 HariShopOnline
             </a>
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Trang Chủ</a>
+                        <a class="nav-link active" href="/index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#products">Sản Phẩm</a>
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="#categories">Danh Mục</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="categories/sell.html">Bán Hàng</a>
+                        <a class="nav-link" href="/categories/sell.html">Bán Hàng</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="indexforgames.html">Games</a>
+                        <a class="nav-link" href="/indexforgames.html">Games</a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-primary ms-3" onclick="window.location.href='authenticator/sign-in.html'">Đăng Nhập</button>
@@ -50,7 +50,7 @@
                     <p class="hero-subtitle">Nơi mua bán trực tuyến đáng tin cậy với hàng nghìn sản phẩm chất lượng</p>
                     <div class="mt-4">
                         <a href="#products" class="btn btn-primary btn-lg me-3">Khám Phá Ngay</a>
-                        <a href="categories/sell.html" class="btn btn-outline-light btn-lg">Bán Hàng</a>
+                        <a href="/categories/sell.html" class="btn btn-outline-light btn-lg">Bán Hàng</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -90,7 +90,7 @@
             <h2 class="text-center text-white mb-5">Danh Mục Sản Phẩm</h2>
             <div class="row g-4">
                 <div class="col-md-3 col-sm-6">
-                    <a href="categories/dien-tu.html" class="category-card text-decoration-none">
+                    <a href="/html/categories/dien-tu.html" class="category-card text-decoration-none">
                         <div class="text-center">
                             <div class="category-icon mb-3">📱</div>
                             <h5 class="text-white">Điện Tử</h5>
@@ -99,7 +99,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="categories/thoi-trang.html" class="category-card text-decoration-none">
+                    <a href="/html/categories/thoi-trang.html" class="category-card text-decoration-none">
                         <div class="text-center">
                             <div class="category-icon mb-3">👗</div>
                             <h5 class="text-white">Thời Trang</h5>
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="categories/nha-cua-vuon.html" class="category-card text-decoration-none">
+                    <a href="/html/categories/nha-cua-vuon.html" class="category-card text-decoration-none">
                         <div class="text-center">
                             <div class="category-icon mb-3">🏡</div>
                             <h5 class="text-white">Nhà Cửa & Vườn</h5>
@@ -117,7 +117,7 @@
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="categories/the-thao.html" class="category-card text-decoration-none">
+                    <a href="/html/categories/the-thao.html" class="category-card text-decoration-none">
                         <div class="text-center">
                             <div class="category-icon mb-3">⚽</div>
                             <h5 class="text-white">Thể Thao</h5>
@@ -136,7 +136,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n1.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>iPhone 15 Pro Max</h5>
                             <p class="text-muted">Điện thoại cao cấp mới nhất</p>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n2.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>MacBook Pro M3</h5>
                             <p class="text-muted">Laptop hiệu năng cao</p>
@@ -163,7 +163,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Sale</div>
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n3.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>AirPods Pro</h5>
                             <p class="text-muted">Tai nghe không dây chống ồn</p>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n4.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>Samsung Galaxy S24</h5>
                             <p class="text-muted">Smartphone Android flagship</p>
@@ -190,7 +190,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">New</div>
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n5.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>iPad Pro 2024</h5>
                             <p class="text-muted">Máy tính bảng cao cấp</p>
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200" alt="Product" class="product-image">
+                        <img src="/img/imgrealife/indeximgfolder/n6.png" alt="Product" class="product-image">
                         <div class="product-info">
                             <h5>Apple Watch Ultra 2</h5>
                             <p class="text-muted">Đồng hồ thông minh cao cấp</p>
@@ -228,9 +228,9 @@
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
                         <li><a href="#products">Sản Phẩm</a></li>
-                        <li><a href="categories/sell.html">Bán Hàng</a></li>
+                        <li><a href="/categories/sell.html">Bán Hàng</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                     </ul>
                 </div>
