--- a/html/authenticator/sign-in.html
+++ b/html/authenticator/sign-in.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Nhập - MarketPlace</title>
+    <title>Đăng Nhập - HariShopOnline - HariGames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -11,8 +11,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <strong>MarketPlace</strong>
+            <a class="navbar-brand" href="/index.html">
+                <strong>HariShopOnline - HariGames</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -20,16 +20,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                        <a class="nav-link" href="/index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
+                        <a class="nav-link" href="/index.html#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sell.html">Bán Hàng</a>
+                        <a class="nav-link" href="/sell.html">Bán Hàng</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="sign-in.html">Đăng Nhập</a>
+                        <a class="nav-link active" href="/html/authenticator/sign-in.html">Đăng Nhập</a>
                     </li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
                             <hr class="my-4">
                             
                             <p class="text-center mb-0">
-                                Chưa có tài khoản? <a href="sign-up.html" class="text-decoration-none">Đăng ký ngay</a>
+                                Chưa có tài khoản? <a href="/html/authenticator/sign-up.html" class="text-decoration-none">Đăng ký ngay</a>
                             </p>
                         </form>
                     </div>
@@ -86,15 +86,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>MarketPlace</h5>
+                    <h5>HariShopOnline - Hari</h5>
                     <p class="text-muted">Nền tảng mua bán trực tuyến hàng đầu</p>
                 </div>
                 <div class="col-md-3">
                     <h6>Liên Kết</h6>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
-                        <li><a href="index.html#products">Sản Phẩm</a></li>
-                        <li><a href="sell.html">Bán Hàng</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html#products">Sản Phẩm</a></li>
+                        <li><a href="/sell.html">Bán Hàng</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
