--- a/html/authenticator/sign-up.html
+++ b/html/authenticator/sign-up.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng Ký - MarketPlace</title>
+    <title>Đăng Ký - HariShopOnline - HariGames</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-     Navigation 
+
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <strong>MarketPlace</strong>
+            <a class="navbar-brand" href="/index.html">
+                <strong>HariShopOnline - HariGames</strong>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -20,23 +20,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                        <a class="nav-link" href="/index.html">Trang Chủ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#products">Sản Phẩm</a>
+                        <a class="nav-link" href="/index.html#products">Sản Phẩm</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sell.html">Bán Hàng</a>
+                        <a class="nav-link" href="/sell.html">Bán Hàng</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="sign-up.html">Đăng Ký</a>
+                        <a class="nav-link active" href="/html/authenticator/sign-in.html">Đăng Ký</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-     Sign Up Form 
     <div class="container">
         <div class="row justify-content-center align-items-center" style="min-height: 80vh; padding: 40px 0;">
             <div class="col-md-6">
@@ -89,7 +88,7 @@
                             <hr class="my-4">
                             
                             <p class="text-center mb-0">
-                                Đã có tài khoản? <a href="sign-in.html" class="text-decoration-none">Đăng nhập ngay</a>
+                                Đã có tài khoản? <a href="/html/authenticator/sign-in.html" class="text-decoration-none">Đăng nhập ngay</a>
                             </p>
                         </form>
                     </div>
@@ -98,20 +97,19 @@
         </div>
     </div>
 
-     Footer 
     <footer class="footer mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>MarketPlace</h5>
+                    <h5>HariShopOnline - HariGames</h5>
                     <p class="text-muted">Nền tảng mua bán trực tuyến hàng đầu</p>
                 </div>
                 <div class="col-md-3">
                     <h6>Liên Kết</h6>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
-                        <li><a href="index.html#products">Sản Phẩm</a></li>
-                        <li><a href="sell.html">Bán Hàng</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
+                        <li><a href="/index.html#products">Sản Phẩm</a></li>
+                        <li><a href="/sell.html">Bán Hàng</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -124,7 +122,7 @@
                 </div>
             </div>
             <hr>
-            <p class="text-center text-muted mb-0">&copy; 2025 MarketPlace. All rights reserved.</p>
+            <p class="text-center text-muted mb-0">&copy; 2025 HariShopOnline - HariGames. All rights reserved.</p>
         </div>
     </footer>
 </body>
