--- a/indexforgames.html
+++ b/indexforgames.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <span class="brand-icon">M</span>
+            <a class="navbar-brand" href="/index.html">
+                <span class="brand-icon">H</span>
                 HariGames
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Trang Chủ</a>
+                        <a class="nav-link" href="/index.html">Trang Chủ</a>
                     <li class="nav-item">
                         <a class="nav-link" href="/html/categories/sell.html">Bán Hàng</a>
                     </li>
@@ -86,7 +86,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Hot</div>
-                        <img src="https://via.placeholder.com/300x200/FF6B35/FFFFFF?text=Free+Fire" alt="Free Fire" class="product-image">
+                        <img src="/img/imgames/freefire/accountff5.png" alt="Free Fire" class="product-image">
                         <div class="product-info">
                             <h5>Tài Khoản Free Fire VIP</h5>
                             <p class="text-muted">Level 60, nhiều kim cương, skin hiếm</p>
@@ -100,7 +100,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">Sale</div>
-                        <img src="https://via.placeholder.com/300x200/004E89/FFFFFF?text=Lien+Quan" alt="Liên Quân" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq5.png" alt="Liên Quân" class="product-image">
                         <div class="product-info">
                             <h5>Tài Khoản Liên Quân</h5>
                             <p class="text-muted">Full tướng, nhiều skin đẹp</p>
@@ -114,7 +114,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
                         <div class="product-badge">New</div>
-                        <img src="https://via.placeholder.com/300x200/E63946/FFFFFF?text=Roblox" alt="Roblox" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox5.png" alt="Roblox" class="product-image">
                         <div class="product-info">
                             <h5>Tài Khoản Roblox Premium</h5>
                             <p class="text-muted">50,000 Robux, nhiều game pass</p>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200/FF6B35/FFFFFF?text=Free+Fire+Diamonds" alt="Kim Cương Free Fire" class="product-image">
+                        <img src="/img/imgames/freefire/accountff7.png" alt="Kim Cương Free Fire" class="product-image">
                         <div class="product-info">
                             <h5>Kim Cương Free Fire</h5>
                             <p class="text-muted">10,000 kim cương nạp trực tiếp</p>
@@ -140,7 +140,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200/004E89/FFFFFF?text=Lien+Quan+Skin" alt="Skin Liên Quân" class="product-image">
+                        <img src="/img/imgames/lienquan/acclq7.png" alt="Skin Liên Quân" class="product-image">
                         <div class="product-info">
                             <h5>Skin Tướng Hiếm LQ</h5>
                             <p class="text-muted">Gói 10 skin tướng siêu hiếm</p>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="product-card">
-                        <img src="https://via.placeholder.com/300x200/E63946/FFFFFF?text=Robux" alt="Robux" class="product-image">
+                        <img src="/img/imgames/roblox/accroblox7.png" alt="Robux" class="product-image">
                         <div class="product-info">
                             <h5>Robux Package</h5>
                             <p class="text-muted">25,000 Robux giá tốt nhất</p>
@@ -222,9 +222,9 @@
                 <div class="col-md-4">
                     <h5>Liên Kết Nhanh</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html">Trang Chủ</a></li>
-                        <li><a href="indexforgames.html">Games Hub</a></li>
-                        <li><a href="categories/sell.html">Bán Hàng</a></li>
+                        <li><a href="/index.html">Trang Chủ</a></li>
+                        <li><a href="/indexforgames.html">Games Hub</a></li>
+                        <li><a href="/html/categories/sell.html">Bán Hàng</a></li>
                         <li><a href="#">Liên Hệ</a></li>
                     </ul>
                 </div>
